Release: temple registry core workflow, DC/TA modules, notifications, and access control (#49)
Co-authored-by: Mili <mili.srivastava@zucitech.com>
Co-authored-by: Claude Opus 5 (1M context) <noreply@anthropic.com>